--- a/frontend/src/app/layouts/full/full.component.html
+++ b/frontend/src/app/layouts/full/full.component.html
@@ -39,16 +39,16 @@
         <!-- ============================================================== -->
         <!-- Search - style you can find in header.scss -->
         <!-- ============================================================== -->
-        <button mat-icon-button class="srh-btn">
-            <mat-icon>search</mat-icon>
-        </button>
-        <form class="app-search">
-            <input type="text" class="form-control" placeholder="Search &amp; enter">
-            <a class="cl-srh-btn">
-                <i class="ti-close"></i>
-            </a>
-        </form>
-        <span fxFlex></span>
+        <!--<button mat-icon-button class="srh-btn">-->
+            <!--<mat-icon>search</mat-icon>-->
+        <!--</button>-->
+        <!--<form class="app-search">-->
+            <!--<input type="text" class="form-control" placeholder="Search &amp; enter">-->
+            <!--<a class="cl-srh-btn">-->
+                <!--<i class="ti-close"></i>-->
+            <!--</a>-->
+        <!--</form>-->
+        <!--<span fxFlex></span>-->
         <!-- ============================================================== -->
         <!-- app header component - style you can find in header.scss / header.component.ts-->
         <!-- ============================================================== -->
@@ -56,9 +56,9 @@
         <!-- ============================================================== -->
         <!-- Right sidebar toggle - style you can find in rightsidebar.component.scss -->
         <!-- ============================================================== -->
-        <button (click)="end.toggle()" mat-icon-button class="ml-xs overflow-visible">
-            <mat-icon>settings</mat-icon>
-        </button>
+        <!--<button (click)="end.toggle()" mat-icon-button class="ml-xs overflow-visible">-->
+            <!--<mat-icon>settings</mat-icon>-->
+        <!--</button>-->
     </mat-toolbar>
     <!-- ============================================================== -->
     <!-- End Topbar - style you can find in pages.scss -->
