all the crud and modal delete works

--- a/frontend/src/app/provider/provider-update.component.html
+++ b/frontend/src/app/provider/provider-update.component.html
@@ -2,7 +2,7 @@
   <div fxFlex.gt-sm="100" fxFlex="100">
     <mat-card>
       <mat-card-content>
-        <mat-card-title>Proveedor Nuevo - Edicion</mat-card-title>
+        <mat-card-title>Proveedor {{!proveedor.id ? 'Nuevo' : 'Edición'}} </mat-card-title>
         <form class="basic-form">
           <div fxLayout="row wrap">
             <!-- column -->
