--- a/src/main/webapp/app/entities/usuario-externo/usuario-externo-detail.component.html
+++ b/src/main/webapp/app/entities/usuario-externo/usuario-externo-detail.component.html
@@ -13,6 +13,10 @@
                 <dd>
                     <span>{{usuarioExterno.pin}}</span>
                 </dd>
+                <dt><span>Role</span></dt>
+                <dd>
+                    <span>{{usuarioExterno.role}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
