--- a/src/main/webapp/app/entities/usuario-externo/usuario-externo-update.component.html
+++ b/src/main/webapp/app/entities/usuario-externo/usuario-externo-update.component.html
@@ -39,6 +39,11 @@
                         </small>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_role">Role</label>
+                    <input type="text" class="form-control" name="role" id="field_role"
+                        [(ngModel)]="usuarioExterno.role" />
+                </div>
 
             </div>
             <div>
