--- a/src/main/webapp/app/entities/proveedor/proveedor-update.component.html
+++ b/src/main/webapp/app/entities/proveedor/proveedor-update.component.html
@@ -85,6 +85,18 @@
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <label for="field_cuentaProveedor">Cuenta Proveedor</label>
+                    <select class="form-control" id="field_cuentaProveedor" multiple name="cuentaProveedor" [(ngModel)]="proveedor.cuentaProveedors">
+                        <option [ngValue]="getSelected(proveedor.cuentaProveedors, cuentaProveedorOption)" *ngFor="let cuentaProveedorOption of cuentaproveedors; trackBy: trackCuentaProveedorById">{{cuentaProveedorOption.codigo}}</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="field_contactoProveedor">Contacto Proveedor</label>
+                    <select class="form-control" id="field_contactoProveedor" multiple name="contactoProveedor" [(ngModel)]="proveedor.contactoProveedors">
+                        <option [ngValue]="getSelected(proveedor.contactoProveedors, contactoProveedorOption)" *ngFor="let contactoProveedorOption of contactoproveedors; trackBy: trackContactoProveedorById">{{contactoProveedorOption.nombre}}</option>
+                    </select>
+                </div>
             </div>
             <div>
                 <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
