added others fields in provider

--- a/src/main/webapp/app/entities/cuenta-proveedor/cuenta-proveedor-detail.component.html
+++ b/src/main/webapp/app/entities/cuenta-proveedor/cuenta-proveedor-detail.component.html
@@ -5,13 +5,9 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
-                <dt><span>Codigo</span></dt>
+                <dt><span>Tipo Cuenta</span></dt>
                 <dd>
-                    <span>{{cuentaProveedor.codigo}}</span>
-                </dd>
-                <dt><span>Estatus</span></dt>
-                <dd>
-                    <span>{{cuentaProveedor.estatus}}</span>
+                    <span>{{cuentaProveedor.tipoCuenta}}</span>
                 </dd>
                 <dt><span>Banco</span></dt>
                 <dd>
