--- a/src/main/webapp/app/entities/proveedor/proveedor-detail.component.html
+++ b/src/main/webapp/app/entities/proveedor/proveedor-detail.component.html
@@ -25,6 +25,10 @@
                 <dd>
                     <span>{{proveedor.telefono}}</span>
                 </dd>
+                <dt><span>Sector</span></dt>
+                <dd>
+                    <span>{{proveedor.sector}}</span>
+                </dd>
                 <dt><span>Cuenta Proveedor</span></dt>
                 <dd>
                     <span *ngFor="let cuentaProveedor of proveedor.cuentaProveedors; let last = last">
