--- a/src/main/webapp/app/entities/cuenta-proveedor/cuenta-proveedor-update.component.html
+++ b/src/main/webapp/app/entities/cuenta-proveedor/cuenta-proveedor-update.component.html
@@ -10,25 +10,10 @@
                         [(ngModel)]="cuentaProveedor.id" readonly />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_codigo">Codigo</label>
-                    <input type="text" class="form-control" name="codigo" id="field_codigo"
-                        [(ngModel)]="cuentaProveedor.codigo" required maxlength="150"/>
-                    <div [hidden]="!(editForm.controls.codigo?.dirty && editForm.controls.codigo?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.codigo?.errors?.required">
-                        This field is required.
-                        </small>
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.codigo?.errors?.maxlength">
-                        This field cannot be longer than 150 characters.
-                        </small>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" for="field_estatus">Estatus</label>
-                    <select class="form-control" name="estatus" [(ngModel)]="cuentaProveedor.estatus" id="field_estatus" >
-                        <option value="ACTIVO">ACTIVO</option>
-                        <option value="INACTIVO">INACTIVO</option>
+                    <label class="form-control-label" for="field_tipoCuenta">Tipo Cuenta</label>
+                    <select class="form-control" name="tipoCuenta" [(ngModel)]="cuentaProveedor.tipoCuenta" id="field_tipoCuenta" >
+                        <option value="CUENTA_CORRIENTE">CUENTA_CORRIENTE</option>
+                        <option value="CUENTA_RECAUDADORA">CUENTA_RECAUDADORA</option>
                     </select>
                 </div>
                 <div class="form-group">
