--- a/src/main/webapp/app/entities/proveedor/proveedor-update.component.html
+++ b/src/main/webapp/app/entities/proveedor/proveedor-update.component.html
@@ -84,6 +84,17 @@
                         </small>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_sector">Sector</label>
+                    <input type="text" class="form-control" name="sector" id="field_sector"
+                        [(ngModel)]="proveedor.sector" maxlength="150"/>
+                    <div [hidden]="!(editForm.controls.sector?.dirty && editForm.controls.sector?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.sector?.errors?.maxlength">
+                        This field cannot be longer than 150 characters.
+                        </small>
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <label for="field_cuentaProveedor">Cuenta Proveedor</label>
