--- a/src/main/webapp/app/entities/proveedor/proveedor.component.html
+++ b/src/main/webapp/app/entities/proveedor/proveedor.component.html
@@ -35,6 +35,7 @@
             <th jhiSortBy="direccion"><span>Direccion</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="correo"><span>Correo</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="telefono"><span>Telefono</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="sector"><span>Sector</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
             </thead>
@@ -46,6 +47,7 @@
                 <td>{{proveedor.direccion}}</td>
                 <td>{{proveedor.correo}}</td>
                 <td>{{proveedor.telefono}}</td>
+                <td>{{proveedor.sector}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
