added children in provider (FE y BE)

--- a/frontend/src/app/provider/provider.component.html
+++ b/frontend/src/app/provider/provider.component.html
@@ -83,7 +83,7 @@
               <mat-header-cell *matHeaderCellDef> Contactos </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Contactos:</span>
-                {{element.contactos.length}}
+                {{element.contactoProveedors.length}}
               </mat-cell>
             </ng-container>
 
