--- a/frontend/src/app/provider/provider-update.component.html
+++ b/frontend/src/app/provider/provider-update.component.html
@@ -8,19 +8,19 @@
             <!-- column -->
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput placeholder="Código" name="code" [(ngModel)]="proveedor.codigo">
+                <input matInput placeholder="Razón social" name="socialReason" [(ngModel)]="proveedor.razonSocial">
               </mat-form-field>
             </div>
             <!-- column -->
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput placeholder="Razon social" name="socialReason" [(ngModel)]="proveedor.razonSocial">
+                <input matInput placeholder="Número de Ruc" name="code" [(ngModel)]="proveedor.codigo">
               </mat-form-field>
             </div>
             <!-- column -->
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput placeholder="Correo" name="email" [(ngModel)]="proveedor.correo">
+                <input matInput placeholder="Dirección" name="address" [(ngModel)]="proveedor.direccion">
               </mat-form-field>
             </div>
             <!-- column -->
@@ -30,19 +30,139 @@
               </mat-form-field>
             </div>
             <!-- column -->
-            <div fxFlex.gt-sm="100" fxFlex="100" class="p-10">
+            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput placeholder="Dirección" name="address" [(ngModel)]="proveedor.direccion">
+                <input matInput placeholder="Email" name="email" [(ngModel)]="proveedor.correo">
               </mat-form-field>
             </div>
             <!-- column -->
-            <div class="p-10">
-              <button mat-raised-button color="primary" (click)="save()">Guardar</button>
+            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
+              <mat-form-field>
+                <input matInput placeholder="Sector" name="email" [(ngModel)]="proveedor.sector">
+              </mat-form-field>
             </div>
-            <!-- column -->
-            <div class="p-10">
-              <button mat-raised-button color="grey" (click)="previousState()">Cancelar</button>
+          </div>
+
+          <div fxLayout="row wrap">
+            <!-- Card column -->
+            <div fxFlex.gt-sm="100%" fxFlex="100">
+              <mat-card>
+                <mat-card-content>
+                  <ng-container *ngIf="(asyncTabs | async) === null">
+                    Loading tabs...
+                  </ng-container>
+
+                  <mat-tab-group>
+                    <mat-tab *ngFor="let tab of asyncTabs | async">
+                      <ng-template mat-tab-label>{{tab.label}}</ng-template>
+
+                      <div fxLayout="row wrap">
+                        <div fxFlex.gt-xs="50" fxFlex="100" class="p-10">
+                          <mat-form-field>
+                            <mat-select [(value)]="selectedTipoDeCuenta">
+                              <mat-option *ngFor="let tipoDeCuenta of tiposDeCuenta" [value]="tipoDeCuenta.value">
+                                {{tipoDeCuenta.viewValue}}
+                              </mat-option>
+                            </mat-select>
+                          </mat-form-field>
+                        </div>
+
+                        <div fxFlex.gt-xs="50" fxFlex="100" class="p-10 text-right">
+                          <button mat-raised-button color="primary" (click)="addAccountProvider()">Agregar</button>
+                        </div>
+                      </div>
+
+                      <mat-table #table matSort [dataSource]="dataSourceCuentas" class="mat-elevation-z8">
+
+                        <ng-container matColumnDef="cuenta">
+                          <mat-header-cell *matHeaderCellDef> Cuenta </mat-header-cell>
+                          <mat-cell *matCellDef="let row">
+                            {{row.tipoCuenta}}
+                          </mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="banco">
+                          <mat-header-cell *matHeaderCellDef> Nombre del Banco </mat-header-cell>
+                          <mat-cell *matCellDef="let row;let i = index">
+                            <!--{{row.banco}}-->
+                            <input (blur)="saveChangesInAccountsRow($event, i, 'banco')" [value]="row.banco">
+                            <!--<input (blur)="saveChangesInAccountsRow(i, 'banco', row.banco)" [(ngModel)]="i+'-banco'">-->
+                          </mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="numeroDeCuenta">
+                          <mat-header-cell *matHeaderCellDef> Numero de cuenta </mat-header-cell>
+                          <mat-cell *matCellDef="let row">
+                            <!--{{row.numeroDeCuenta}}-->
+                            <input value="{{row.numeroDeCuenta}}">
+                          </mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="nombreCuenta">
+                          <mat-header-cell *matHeaderCellDef> Titular de la cuenta </mat-header-cell>
+                          <mat-cell *matCellDef="let row">
+                            <!--{{row.nombreCuenta}}-->
+                            <input value="{{row.nombreCuenta}}">
+                          </mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="quitar">
+                          <mat-header-cell *matHeaderCellDef> Quitar </mat-header-cell>
+                          <mat-cell *matCellDef="let row">
+                            <a class="ng-star-inserted">
+                              <i class="ti-trash text-danger m-r-10"></i>
+                            </a>
+                          </mat-cell>
+                        </ng-container>
+
+                        <mat-header-row *matHeaderRowDef="displayedColumnsCuentas"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumnsCuentas;let i = index"></mat-row>
+                      </mat-table>
+
+                      <!--<mat-table #table matSort [dataSourceContactos]="dataSourceContactos" class="mat-elevation-z8">-->
+
+                        <!--<ng-container matColumnDef="nombre">-->
+                          <!--<mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>-->
+                          <!--<mat-cell *matCellDef="let element">-->
+                            <!--{{element.nombre}}-->
+                          <!--</mat-cell>-->
+                        <!--</ng-container>-->
+
+                        <!--<ng-container matColumnDef="cargo">-->
+                          <!--<mat-header-cell *matHeaderCellDef> Cargo </mat-header-cell>-->
+                          <!--<mat-cell *matCellDef="let element">-->
+                            <!--{{element.cargo}}-->
+                          <!--</mat-cell>-->
+                        <!--</ng-container>-->
+
+                        <!--<ng-container matColumnDef="telefono">-->
+                          <!--<mat-header-cell *matHeaderCellDef> Telefono </mat-header-cell>-->
+                          <!--<mat-cell *matCellDef="let element">-->
+                            <!--{{element.telefono}}-->
+                          <!--</mat-cell>-->
+                        <!--</ng-container>-->
+
+                        <!--<ng-container matColumnDef="producto">-->
+                          <!--<mat-header-cell *matHeaderCellDef> Producto </mat-header-cell>-->
+                          <!--<mat-cell *matCellDef="let element">-->
+                            <!--{{element.producto}}-->
+                          <!--</mat-cell>-->
+                        <!--</ng-container>-->
+
+                        <!--<mat-header-row *matHeaderRowDef="displayedColumnsContactos"></mat-header-row>-->
+                        <!--<mat-row *matRowDef="let row; columns: displayedColumnsContactos;"></mat-row>-->
+                      <!--</mat-table>-->
+                    </mat-tab>
+                  </mat-tab-group>
+
+                </mat-card-content>
+              </mat-card>
             </div>
+          </div>
+
+          <div class="p-10 text-right">
+            <button mat-raised-button (click)="previousState()">Cancelar</button>
+            <button mat-raised-button color="primary" (click)="save()">Guardar</button>
           </div>
         </form>
       </mat-card-content>
