hidde productos relacionados

--- a/frontend/src/app/provider/provider-detail.component.html
+++ b/frontend/src/app/provider/provider-detail.component.html
@@ -86,16 +86,16 @@
               </div>
             </div>
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Productos Relacionados:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{proveedor.productosRelacionados}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Productos Relacionados:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{proveedor.productosRelacionados}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
           </div>
 
           <div fxLayout="row wrap">
